# myantivirus-

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  rust-toolchain.toml
.github/workflows/: ci.yml  codeql.yml  release.yml
agent/scanner-cli/: Cargo.toml  build.rs
agent/scanner-cli/src/: agent.rs  embedded.rs  interactive.rs  main.rs  paths.rs  runner.rs  service.rs  ui.rs
agent/scanner-core/: Cargo.toml
agent/scanner-core/src/: archive.rs  behavior.rs  bootstrap.rs  cache.rs  engine.rs  error.rs  event_log.rs  feeds.rs  firewall.rs  hashing.rs  heuristics.rs  intel.rs  lib.rs  lolbin.rs  pipeline.rs  quarantine.rs  ransom_guard.rs  ratelimit.rs  realtime.rs  remediation.rs  report.rs  script_analysis.rs  signatures.rs  telemetry.rs  trust.rs  trust_service.rs  verdict.rs  webprotect.rs  yara_engine.rs
agent/scanner-core/tests/: integration.rs
agent/talos-agent/: Cargo.toml
agent/talos-agent/src/: core.rs  daemon.rs  embedded.rs  main.rs  paths.rs  service_win.rs
agent/talos-gui/: Cargo.toml  build.rs
agent/talos-gui/assets/: icon-64.rgba  talos_hero.rgba
agent/talos-gui/src/: agent_link.rs  config.rs  engine_glue.rs  history.rs  main.rs
agent/talos-ipc/: Cargo.toml
agent/talos-ipc/src/: client.rs  frame.rs  lib.rs  proto.rs  transport.rs
agent/talos-ipc/tests/: roundtrip.rs
cloud/: README.md
docs/: 01-core-architecture.md  02-detection-engine.md  03-secure-updates.md  04-deployment-distribution.md  05-compliance-privacy.md  06-implementation-roadmap.md  07-telemetry-flow.md  08-agent-service.md  USAGE.md
installer/: README.md
installer/sign/: new-selfsigned-cert.ps1  sign.ps1  talos-signing.cer
installer/wix/: Bundle.wxs  Package.wxs
kernel/: README.md
ml/: README.md
signatures/: README.md
signatures/hashes/: baseline.hashdb  talos.hashdb
signatures/yara/: eicar.yar  offensive_tooling.yar  powershell.yar  webshells.yar
tools/: README.md  make_hero.py  make_icon.py  process_logo.py
