[workspace]
resolver = "2"
members = [
    "agent/scanner-core",
    "agent/scanner-cli",
    "agent/talos-gui",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.85"
license = "Proprietary"
authors = ["Talos EPP Team"]
repository = "https://github.com/gtsatsakis442-eng/myantivirus-"

# Optimize release builds for the scan hot-path.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
