[package]
name = "scanner-cli"
description = "Talos EPP — command-line scanner front-end"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "talos"
path = "src/main.rs"

[dependencies]
scanner-core = { path = "../scanner-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Embed the app icon + version metadata into talos.exe (Windows only).
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3"
