[package]
name = "scanner-core"
description = "Talos EPP — user-mode scanning engine (hash signatures + YARA)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hex = "0.4"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
yara-x = "1"
goblin = "0.10.7"
zip = { version = "7.2.0", default-features = false, features = ["deflate"] }
rayon = "1.12.0"
notify = "6"
# Embedded transactional store for the ML telemetry engine (Module 3). Bundled
# so it compiles without a system libsqlite3 on Linux CI and the Windows MSVC build.
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fanotify"] }
