[package]
name = "talos-agent"
description = "Talos EPP — endpoint protection agent service (real-time host + local IPC)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "talos-agent"
path = "src/main.rs"

[dependencies]
scanner-core = { path = "../scanner-core" }
talos-ipc = { path = "../talos-ipc" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# Windows Service control handler + install/uninstall (SCM integration).
[target.'cfg(windows)'.dependencies]
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
