[package]
name = "talos-ipc"
description = "Talos EPP — local IPC protocol between the agent service and its clients"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interprocess = "2"
